@@ -35,7 +35,7 @@ if (!defined('PHPUnit_MAIN_METHOD')) {
 require_once 'PHPUnit/Framework/TestSuite.php';
 require_once 'PHPUnit/TextUI/TestRunner.php';
 
-
+chdir(dirname(__FILE__));
 require_once 'Net_FTPTest.php';
 
 /**
