@@ -5,6 +5,7 @@
 * Fixed Bug #13114: Error check in $FTP->getRecursive(...)
 * Implemented Request #13104: connect() <> $this->handle in login()
 * Fixed Bug #13917: putRecursive always return PEAR::Error
+* Fixed Bug #13850: inclusion of Net/FTP.php in tests doesn't always work
 
 1.4.0a1 - 2007-12-22
 * Fixed bug #6754: Add method to set directory list matcher explicitly
